[package]
name = "rust-bfi"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = {version = "0.58.0", features = [
  "Win32",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Wdk",
  "Wdk_Graphics_Direct3D"
  ]}
